<resources>
    <string name="Flick_the_screen_left_or_right">Flick the screen left or right to move to other screen</string>
    <string name="Long_press_on_any_widget">Tap and hold the widget that you want to add.</string>
    <string name="Long_press_on_any_widget_to_add_to_home_screen">Tap and hold the widget you want to add to the home screen.</string>
    <string name="Shortcut_selected">Only Widgets can be selected</string>
    <string name="Tap_on_homeScreen">Select a type of screen you want to edit.</string>
    <string name="Tap_on_set_wallpaper">Select set wallpaper.</string>
    <string name="Tap_on_widgets_tab">Select the Widgets tab.</string>
    <string name="Toast_createfolder">Enter name for the folder and press OK</string>
    <string name="Wallpaper_chooser_gallery">Gallery</string>
    <string name="Wallpaper_chooser_live_wallpapers">Live wallpapers</string>
    <string name="Wallpaper_chooser_wallpapers">Wallpapers</string>
    <string name="accessibility_add_home_screen">Add page</string>
    <string name="accessibility_button">Button</string>
    <string name="accessibility_check_box_checked">Ticked</string>
    <string name="accessibility_check_box_unchecked">Not ticked</string>
    <string name="accessibility_open_home_screen_page_edit">Open Home Screen Paged Edit</string>
    <string name="accessibility_open_main_menu_page_edit">Open Main Menu Paged Edit</string>
    <string name="activity_not_found">Application is not installed</string>
    <string name="add_to_home_msg">Tap and hold an item to move it to the home screen</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="alphabetical_list_indicator_indexes">\#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="application_name">TouchWiz Home</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="cancel_action">Cancel</string>
    <string name="cannot_move_folders">Cannot move folders to the apps page. Folder icon can be rearranged only in folder page.</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="cling_do_not_show_again">Do not show again</string>
    <string name="cling_ok">OK</string>
    <string name="content_description_hand">Point to touch</string>
    <string name="create_folder_dialog_msg">Enter folder name</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delete_folder">Delete folder</string>
    <string name="direct_dial">Direct Dial</string>
    <string name="direct_message">Direct Message</string>
    <string name="disable_message" formatted="false">%s and all related features will be disabled. To enable %s again, go to Settings > Application manager.</string>
    <string name="disable_title">Disable application</string>
    <string name="disable_uninstall_message">%s and all related features will be disabled. Your data will also be deleted. To enable it again, go to Settings > Application manager.</string>
    <string name="disable_uninstall_ok">OK</string>
    <string name="disable_uninstall_reset">Reset</string>
    <string name="disable_uninstall_title">Disable and reset</string>
    <string name="downloadable_dialog_popup_text">Additional help content must be downloaded. Mobile data will be used if you download data without connecting via Wi-Fi network. You will be taken to the download screen.</string>
    <string name="downloadable_dialog_popup_text_wifi">Additional help content must be downloaded. Device must be connected to a Wi-Fi network. You will be taken to the download screen.</string>
    <string name="festival_data_cancel">Cancel</string>
    <string name="festival_data_mobile_dialog_text_mobile">WLAN is not available. Connecting to mobile networks may result in additional charges depending on your payment plan.</string>
    <string name="festival_data_mobile_dialog_text_title_mobile">Connect via mobile networks</string>
    <string name="festival_data_ok">OK</string>
    <string name="festival_data_retry">Retry</string>
    <string name="festival_data_skip_message">Do not show again</string>
    <string name="festival_data_text_network">Cannot connect to Internet. Please check your connection settings and try again.</string>
    <string name="festival_data_text_title_network">No network connection</string>
    <string name="festival_data_wlan_dialog_text_title_wlan">Connect via WLAN</string>
    <string name="festival_data_wlan_dialog_text_wlan">The device will use data through the currently connected WLAN network.</string>
    <string name="festival_learn_about">Learn about %s</string>
    <string name="festival_learn_about_birthday">My birthday</string>
    <string name="festival_learn_about_childrensday">"Children's Day"</string>
    <string name="festival_learn_about_chinesenewyear">Spring Festival</string>
    <string name="festival_learn_about_chinesevalentine">Double Seventh Festival</string>
    <string name="festival_learn_about_christmas">Christmas</string>
    <string name="festival_learn_about_congratulation">Congratulation</string>
    <string name="festival_learn_about_doubleninth">Double Ninth Festival</string>
    <string name="festival_learn_about_dragonboat">Dragon Boat Festival</string>
    <string name="festival_learn_about_lantern">Lantern Festival</string>
    <string name="festival_learn_about_mayday">Labour Day</string>
    <string name="festival_learn_about_midautumn">Mid-Autumn Festival</string>
    <string name="festival_learn_about_nationalday">National Day</string>
    <string name="festival_learn_about_newyear">New Year</string>
    <string name="festival_learn_about_teachersday">"Teachers' Day"</string>
    <string name="festival_learn_about_thankyou">Thank you</string>
    <string name="festival_learn_about_tombsweeping">Tomb-Sweeping Day</string>
    <string name="festival_learn_about_valentine">"Valentine's Day"</string>
    <string name="festival_title_birthday">Happy birthday!</string>
    <string name="festival_title_childrensday">"Happy Children's Day!"</string>
    <string name="festival_title_chinesenewyear">Happy Spring Festival!</string>
    <string name="festival_title_chinesevalentine">Happy Tanabata!</string>
    <string name="festival_title_christmas">Merry Christmas!</string>
    <string name="festival_title_congratulation">Congratulations!</string>
    <string name="festival_title_doubleninth">Happy Double Ninth Day!</string>
    <string name="festival_title_dragonboat">Happy Dragon Boat Festival!</string>
    <string name="festival_title_lantern">Happy Lantern Festival!</string>
    <string name="festival_title_mayday">Happy Labour Day!</string>
    <string name="festival_title_midautumn">Happy Mid-Autumn Festival!</string>
    <string name="festival_title_nationalday">Happy National Day!</string>
    <string name="festival_title_newyear">Happy New Year!</string>
    <string name="festival_title_teachersday">"Happy Teachers' Day!"</string>
    <string name="festival_title_thankyou">Thank you!</string>
    <string name="festival_title_tombsweeping">Tomb-Sweeping Day</string>
    <string name="festival_title_valentine">"Happy Valentine's Day!"</string>
    <string name="flipboard_magazine_softkey_my_magazine">Flipboard Briefing</string>
    <string name="flipboard_magazine_summary">View all Flipboard Briefing updates on the home screen.</string>
    <string name="folder">Folder</string>
    <string name="folder_add_app">Add application</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_color_blue">blue</string>
    <string name="folder_color_green">green</string>
    <string name="folder_color_grey">grey</string>
    <string name="folder_color_red">red</string>
    <string name="folder_color_yellow">yellow</string>
    <string name="folder_facebook">Social</string>
    <string name="folder_galaxy_plus">Galaxy Plus</string>
    <string name="folder_google">Google</string>
    <string name="folder_hint_text">Unnamed folder</string>
    <string name="folder_opened">Folder opened</string>
    <string name="folder_samsung">Samsung</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="google_search">Google Search</string>
    <string name="guide_add_shortcut_complete">You have added the application to the home screen.</string>
    <string name="guide_add_widget_complete">You have added the widget to the home screen.</string>
    <string name="guide_ap_done">OK</string>
    <string name="guide_create_folder_complete">You have created a new folder.</string>
    <string name="guide_create_folder_drag">Drag and drop the application onto %s.</string>
    <string name="guide_create_folder_tap_and_hold">Tap and hold the application you want to add to the new folder.</string>
    <string name="guide_dialog_comlete_summary">You have completed the step-by-step guide. Return to Help</string>
    <string name="guide_dialog_comlete_title">Step-by-step guide complete</string>
    <string name="guide_dialog_failed_title">Home screen tutorial</string>
    <string name="guide_move_apps">Tap and hold an item until it can be edited.</string>
    <string name="home_edit_add_to_personal">Add to personal</string>
    <string name="home_edit_bar_app_info_title">App info</string>
    <string name="home_edit_bar_create_folder_title">Create folder</string>
    <string name="home_edit_bar_create_page_title">Create page</string>
    <string name="home_edit_bar_delete_title">Remove</string>
    <string name="menu_help">Help</string>
    <string name="menu_item_add_item">Add to home screen</string>
    <string name="options_home_add_page">Add or remove a page</string>
    <string name="options_home_add_widget">Add apps and widgets</string>
    <string name="options_home_edit">Edit page</string>
    <string name="options_home_search">Search</string>
    <string name="options_home_search_via_sfinder">Search using S Finder</string>
    <string name="options_home_set_theme">Themes</string>
    <string name="options_home_set_wallpaper">Set wallpaper</string>
    <string name="options_home_settings">Settings</string>
    <string name="options_home_usm">Ultimate standby mode</string>
    <string name="options_menu_disableApp">Disable</string>
    <string name="options_menu_downloaded_apps">Downloaded apps</string>
    <string name="options_menu_edit">Edit</string>
    <string name="options_menu_galaxy_essentials">GALAXY Essentials</string>
    <string name="options_menu_market">Play Store</string>
    <string name="options_menu_move_to_secret_box">Move to Private</string>
    <string name="options_menu_remove_from_secret_box">Remove from Private</string>
    <string name="options_menu_search">Search widgets</string>
    <string name="options_menu_sel_apps_to_enable">Show disabled apps</string>
    <string name="options_menu_sel_apps_to_hide">Hide apps</string>
    <string name="options_menu_sel_apps_to_unhide">Show hidden apps</string>
    <string name="options_menu_share_app">Share app</string>
    <string name="options_menu_uninstall">Uninstall</string>
    <string name="options_menu_view_type">Sort by</string>
    <string name="remove_app_folder_title">Remove folder</string>
    <string name="title_wallpaper_to">Set wallpaper</string>
    <string name="uninstall_cancel">Cancel</string>
    <string name="wallpaper_options_default_images">Default images</string>
    <string name="wallpaper_options_keywords">Keyword</string>
    <string name="wallpaper_options_live_wallpapers">Live wallpapers</string>
    <string name="wallpaper_options_location_weather">Location and weather</string>
    <string name="wallpaper_options_more_images">More images</string>
    <string name="wallpaper_options_no_image">No Image</string>
    <string name="wallpaper_options_photoslide">Photo slide</string>
</resources>