<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/options_menu_market" android:title="@string/options_menu_market" />
    <item android:id="@id/options_menu_edit" android:title="@string/options_menu_edit" />
    <item android:id="@id/options_home_add_widget" android:title="@string/options_home_add_widget" />
    <item android:id="@id/options_home_createfolder" android:title="@string/home_edit_bar_create_folder_title" />
    <item android:id="@id/options_home_removefolder" android:title="@string/remove_app_folder_title" />
    <item android:id="@id/options_home_set_wallpaper" android:title="@string/options_home_set_wallpaper" />
    <item android:id="@id/options_home_set_theme" android:title="@string/options_home_set_theme" />
    <item android:id="@id/options_home_edit" android:title="@string/options_home_edit" />
    <item android:id="@id/options_home_search_via_sfinder" android:title="@string/options_home_search_via_sfinder" />
    <item android:id="@id/options_menu_search" android:title="@string/options_menu_search" />
    <item android:id="@id/options_menu_view_type" android:title="@string/options_menu_view_type" />
    <item android:id="@id/options_menu_downloaded_apps" android:title="@string/options_menu_downloaded_apps" />
    <item android:id="@id/options_menu_uninstall" android:title="@string/options_menu_uninstall" />
    <item android:id="@id/options_menu_share_app" android:title="@string/options_menu_share_app" />
    <item android:id="@id/options_menu_sel_apps_to_hide" android:title="@string/options_menu_sel_apps_to_hide" />
    <item android:id="@id/options_menu_sel_apps_to_enable" android:title="@string/options_menu_sel_apps_to_enable" />
    <item android:id="@id/options_menu_sel_apps_to_unhide" android:title="@string/options_menu_sel_apps_to_unhide" />
    <item android:id="@id/options_menu_move_to_secret_box" android:title="@string/options_menu_move_to_secret_box" />
    <item android:id="@id/options_menu_remove_from_secret_box" android:title="@string/options_menu_remove_from_secret_box" />
    <item android:id="@id/options_home_add_page" android:visible="false" android:orderInCategory="2" android:title="@string/options_home_add_page" />
    <item android:id="@id/options_home_search" android:orderInCategory="3" android:title="@string/options_home_search" />
    <item android:id="@id/options_home_usm" android:visible="false" android:orderInCategory="4" android:title="@string/options_home_usm" />
    <item android:id="@id/options_home_settings" android:orderInCategory="5" android:title="@string/options_home_settings" />
    <item android:id="@id/options_home_help" android:orderInCategory="6" android:title="@string/menu_help" />
    <item android:id="@id/options_menu_galaxy_essentials" android:title="@string/options_menu_galaxy_essentials" />
</menu>