<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher2.HomeEditBar android:id="@id/home_edit_bar" style="@style/HomeEditDragBar"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/new_folder_container" style="@style/HomeEditDragBarItemNormal">
        <TextView android:id="@id/new_folder" android:text="@string/home_edit_bar_create_folder_title" android:drawableTop="@drawable/toolbar_ic_create_folder" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/app_info_container" style="@style/HomeEditDragBarItemNormal">
        <TextView android:id="@id/app_info" android:text="@string/home_edit_bar_app_info_title" android:drawableTop="@drawable/toolbar_ic_info" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/disable_container" style="@style/HomeEditDragBarItemDelete">
        <TextView android:id="@id/disable" android:text="@string/options_menu_disableApp" android:drawableTop="@drawable/toolbar_ic_disable" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/uninstall_container" style="@style/HomeEditDragBarItemDelete">
        <TextView android:id="@id/uninstall" android:text="@string/options_menu_uninstall" android:drawableTop="@drawable/toolbar_ic_uninstall" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/addToPersonal_container" style="@style/HomeEditDragBarItemNormal">
        <TextView android:id="@id/addToPersonal" android:text="@string/home_edit_add_to_personal" android:drawableTop="@drawable/toolbar_ic_add_to_personal" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/cancel_container" style="@style/HomeEditDragBarItemDelete">
        <TextView android:id="@id/cancel" android:text="@string/uninstall_cancel" android:drawableTop="@drawable/toolbar_ic_cancel" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
    <FrameLayout android:id="@id/delete_container" style="@style/HomeEditDragBarItemDelete">
        <TextView android:id="@id/delete" android:text="@string/home_edit_bar_delete_title" android:drawableTop="@drawable/toolbar_ic_delete" style="@style/HomeEditDragBarIcon" />
    </FrameLayout>
</com.android.launcher2.HomeEditBar>