<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="start|top|center" android:orientation="horizontal" android:id="@id/folder_color_view1" android:background="@drawable/home_folder_colorpicker_bg" android:paddingTop="@dimen/folder_color_view_padding_top" android:paddingBottom="@dimen/folder_color_view_padding_bottom" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/folder_option_view_margin_top" android:layout_marginBottom="@dimen/folder_option_view_margin_bottom" android:paddingStart="@dimen/folder_color_view_padding_left" android:paddingEnd="@dimen/folder_color_view_padding_right" android:layout_marginStart="@dimen/folder_option_view_margin_left" android:layout_marginEnd="@dimen/folder_option_view_margin_right"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/folder_color_default" android:background="@drawable/focusable_home_folder_colorpicker_blue" android:focusable="true" android:layout_width="@dimen/folder_color_view_icon_size" android:layout_height="@dimen/folder_color_view_icon_size" android:src="@drawable/home_bg_select" android:scaleType="centerInside" android:contentDescription="@string/folder_color_blue" />
    <ImageView android:id="@id/folder_color_gray" android:background="@drawable/focusable_home_folder_colorpicker_gray" android:focusable="true" android:layout_width="@dimen/folder_color_view_icon_size" android:layout_height="@dimen/folder_color_view_icon_size" android:scaleType="centerInside" android:contentDescription="@string/folder_color_grey" android:layout_marginStart="@dimen/folder_color_view_icon_margin_left" />
    <ImageView android:id="@id/folder_color_red" android:background="@drawable/focusable_home_folder_colorpicker_red" android:focusable="true" android:layout_width="@dimen/folder_color_view_icon_size" android:layout_height="@dimen/folder_color_view_icon_size" android:scaleType="centerInside" android:contentDescription="@string/folder_color_red" android:layout_marginStart="@dimen/folder_color_view_icon_margin_left" />
    <ImageView android:id="@id/folder_color_yellow" android:background="@drawable/focusable_home_folder_colorpicker_yellow" android:focusable="true" android:layout_width="@dimen/folder_color_view_icon_size" android:layout_height="@dimen/folder_color_view_icon_size" android:scaleType="centerInside" android:contentDescription="@string/folder_color_yellow" android:layout_marginStart="@dimen/folder_color_view_icon_margin_left" />
    <ImageView android:id="@id/folder_color_green" android:background="@drawable/focusable_home_folder_colorpicker_green" android:focusable="true" android:layout_width="@dimen/folder_color_view_icon_size" android:layout_height="@dimen/folder_color_view_icon_size" android:scaleType="centerInside" android:contentDescription="@string/folder_color_green" android:layout_marginStart="@dimen/folder_color_view_icon_margin_left" />
</LinearLayout>