<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#fff5f5f5" android:gravity="center_vertical" android:id="@id/addToHomescreen" android:background="?android:listChoiceBackgroundIndicator" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall" android:text="@string/title_wallpaper_to" android:paddingStart="?android:listPreferredItemPaddingLeft" android:paddingEnd="?android:listPreferredItemPaddingLeft" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@id/repositioned_title" android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_item_add_item" android:paddingStart="?android:listPreferredItemPaddingLeft" android:paddingEnd="?android:listPreferredItemPaddingLeft" />
        <ListView android:id="@id/addtolist" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout android:layout_gravity="top" android:orientation="vertical" android:id="@id/guide_hand_pointer_wallpaper_for_step1" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/guide_hand_pointer2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help_tap" android:contentDescription="@string/content_description_hand" android:layout_marginStart="@dimen/help_hub_chooser_insert_item_image_margin_left" />
        <RelativeLayout android:id="@id/text_box" android:paddingTop="@dimen/help_hub_guide_textbox_padding_top" android:paddingBottom="@dimen/help_hub_guide_textbox_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/guide_hand_pointer2" android:paddingStart="@dimen/help_hub_guide_textbox_padding_left" android:paddingEnd="@dimen/help_hub_guide_textbox_padding_right">
            <ImageView android:id="@id/guide_up_pointer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help_popup_picker_t_c" android:layout_alignParentTop="true" android:layout_marginStart="@dimen/help_hub_chooser_insert_item_pointer_up_margin_left" />
            <TextView android:textSize="@dimen/help_hub_guide_text_size" android:textStyle="normal" android:textColor="@android:color/black" android:id="@id/guide_bubble_summary" android:background="@drawable/help_popup_picker_bg_w_01" android:paddingTop="@dimen/help_hub_guide_text_padding_top" android:paddingBottom="@dimen/help_hub_guide_text_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.5dip" android:maxWidth="@dimen/help_hub_guide_text_width" android:text="@string/Tap_on_set_wallpaper" android:layout_alignParentTop="true" android:paddingStart="@dimen/help_hub_guide_text_padding_left" android:paddingEnd="@dimen/help_hub_guide_text_padding_right" android:layout_marginStart="@dimen/help_hub_chooser_insert_item_bubble_summary_margin_left" android:layout_alignParentStart="true" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>