<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/wallpaper_options_parent_padding" android:paddingBottom="@dimen/wallpaper_options_parent_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/wallpaper_options_parent_left_padding" android:paddingEnd="@dimen/wallpaper_options_parent_right_padding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/llTopContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llDefaultImage" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/ivDefaultImages" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_wallpaper" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvDefaultImages" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_default_images" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llMoreImages" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/wallpaper_options_intermediate_item_margin_left">
            <ImageView android:id="@id/ivMoreImages" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_wallpaper" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvMoreImages" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_more_images" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llLiveWallpapers" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/wallpaper_options_intermediate_item_margin_left">
            <ImageView android:id="@id/ivLiveWallpapers" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_live_wallpaper" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvLiveWallpapers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_live_wallpapers" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llKeyword" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/wallpaper_options_intermediate_item_margin_left">
            <ImageView android:id="@id/ivKeyword" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_application" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvKeyword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_keywords" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/llBottomContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/wallpaper_options_bottom_layout_margin_top" android:weightSum="3.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llLocationWeather" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/ivLocationWeather" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_application" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvLocationWeather" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_location_weather" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llPhotoSlide" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/wallpaper_options_intermediate_item_margin_left">
            <ImageView android:id="@id/ivPhotoSlide" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_application" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvPhotoSlide" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_photoslide" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llDummy" android:background="@drawable/tab_widget_indicator_selector" android:padding="@dimen/wallpaper_options_item_padding" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="@dimen/wallpaper_options_item_width" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/wallpaper_options_intermediate_item_margin_left">
            <ImageView android:id="@id/ivDummy" android:layout_width="@dimen/wallpaper_options_icon_width" android:layout_height="@dimen/wallpaper_options_icon_height" android:src="@drawable/ic_launcher_application" />
            <TextView android:gravity="center_horizontal" android:id="@id/tvDummy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_options_no_image" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>